@@ -17,6 +17,9 @@ https://github.com/elastic/apm-agent-python/compare/v1.0.0.dev2\...master[Check 
  * ensured that transaction data is also passed through processors ({pull}84[#84])
  * added `uninstrument` function to reverse instrumentation,
    and exposed both `instrument` and `uninstrument` as public API in the `elasticapm` namespace  ({pull}90[#90])
+ * added normalization of HTTP status codes into classes for the `transaction.result` field. A HTTP status of `200`
+   will be turned into `HTTP 2xx`. The unchanged status code is still available in `context.response.status_code`.
+   ({pull}85[#85])
 
 [[release-v1.0.0.dev2]]
 [float]
